--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <h1>_______________________________</h1>
   <button id="ball-roll-btn">Ball Roll</button>
   <button id="shrink-btn">Shrink</button>
-  <button id="adam-btn">Adam's Anim</button>
+  <button id="adam-btn">Wile E. Coyote</button>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="app.js"></script>
 </body>
